# swaystart

./: Cargo.toml  flake.nix  layout.json  main.json  test.json
src/: main.rs  matcher.rs  node.rs  placeholder.rs  visit.rs
