[package]
name = "swaystart"
version = "0.1.0"
authors = ["Yuri Iozzelli <y.iozzelli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "0.9.1"
glib = "0.10.3"
anyhow = "1.0.40"
swayipc = "3.0.0-alpha.3"
log = "0.4.14"
pretty_env_logger = "0.4.0"
structopt = { version = "0.3.21", features = [ "paw" ] }
paw = "1.0.0"
serde = { version = "1.0.125", features = [ "derive" ] }
serde_json = "1.0.64"
