[package]
name = "swaystart"
version = "0.1.0"
authors = ["Yuri Iozzelli <y.iozzelli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "0.18.3"
glib = "0.18.3"
anyhow = "1.0.75"
swayipc = "3.0.1"
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde_json = "1.0.108"
dirs = "5.0.1"
serde = { version = "1.0.192", features = [ "derive" ] }
clap = { version = "4.4.8", features = ["derive"] }
