[package]
name = "swaystart"
version = "0.1.0"
authors = ["Yuri Iozzelli <y.iozzelli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "0.20.6"
glib = "0.20.6"
anyhow = "1.0.93"
swayipc = "3.0.3"
log = "0.4.22"
pretty_env_logger = "0.5.0"
serde_json = "1.0.133"
dirs = "5.0.1"
serde = { version = "1.0.215", features = [ "derive" ] }
clap = { version = "4.5.21", features = ["derive"] }
